footer was added along with the navigation bar

--- a/DoctorAndroid/app/src/main/res/values/strings.xml
+++ b/DoctorAndroid/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
-    <string name="app_name">Donors&amp;Drives</string>
-    <string name="hey_there">hey there</string>
-    <string name="title_activity_maps">Map</string>
-    <string name="title_activity_location">Map</string>
+    <string name="app_name">AddMarkerDemo</string>
+    <string name="map_key" translatable="false">AIzaSyAE1WzXwL_hjXe_z0BDIZ1N0LTdLK-gZfE</string>
 </resources>
+
+
+    <!--
+    AIzaSyAE1WzXwL_hjXe_z0BDIZ1N0LTdLK-gZfE
+    -->
